<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_dice"
                android:id="@+id/numDice"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/numDiceInput"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/hint_enter_dice" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_sides"
                android:layout_weight="1"
                android:id="@+id/sides"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sidesInput"
                android:layout_weight="1"
                android:editable="true"
                android:inputType="number"
                android:hint="@string/hint_enter_sides"/>
        </LinearLayout>



    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_below="@+id/linearLayout2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:clickable="true"/>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/grey" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:clickable="true"
            android:enabled="false"/>
    </LinearLayout>

</RelativeLayout>